<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/travel_woman"
    android:gravity="center"
    >
    
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        >

	    <Button
	        android:id="@+id/createTripButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/createTripButton"
	        android:onClick="createTrip"
	    />
	    <Button
	        android:id="@+id/openTripButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/openTripButton"
	        android:onClick="openTrip"
	    />
	    <Button
	        android:id="@+id/globalSettingsButton"
	        android:layout_marginTop="30dip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/globalSettingsButton"
            android:onClick="globalSettings"
	    />
        
    </LinearLayout>
        
</LinearLayout>
